force-app/main/default/objects/Classification_Code__c/Classification_Code__c.object-meta.xml
<CustomObject>
    <label>Classification Code</label>
    <nameField>
        <displayFormat>CC-{000}</displayFormat>
        <label>Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classification Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>