force-app/main/default/objects/Classification_Code__c/fields/Classification_Code__c.field-meta.xml
<CustomField>
    <fullName>Classification_Code__c</fullName>
    <formula>Classification_Master__r.Classification_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Code</label>
    <type>Text</type>
</CustomField>