force-app/main/default/objects/Classification_Code__c/fields/Classification_Master__c.field-meta.xml
<CustomField>
    <fullName>Classification_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Master</label>
    <referenceTo>Classification_Master__c</referenceTo>
    <relationshipLabel>Classification Codes</relationshipLabel>
    <relationshipName>Classification_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>