force-app/main/default/objects/Classification_Code__c/fields/Date_Removed__c.field-meta.xml
<CustomField>
    <fullName>Date_Removed__c</fullName>
    <label>Date Removed</label>
    <type>Date</type>
</CustomField>