force-app/main/default/objects/Classification_Code__c/fields/Disable_Grid_Validation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Grid_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Grid Validation</label>
    <type>Checkbox</type>
</CustomField>