force-app/main/default/objects/Classification_Code__c/fields/Inactive_for_Non_Admins__c.field-meta.xml
<CustomField>
    <fullName>Inactive_for_Non_Admins__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>