force-app/main/default/objects/Classification_Code__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Classification_Master__r.Full_Classification_Name__c</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>