force-app/main/default/objects/Classification_Code__c/fields/Project_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Project_Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Proposal</label>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipLabel>Classification Codes</relationshipLabel>
    <relationshipName>Classification_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>